<resources>
    <string name="app_name">CovidHelp_ProjetoFinal</string>
    <string name="covidhelp" translatable="false">COVIDHELP</string>
    <string name="quer_ajudar_quem_mais_precisa">QUER AJUDAR QUEM MAIS PRECISA?</string>
    <string name="registo">REGISTO</string>
    <string name="entrar">ENTRAR</string>
    <string name="aplica_o_apenas_com_uso_recreativo">APLICAÇÃO APENAS COM USO RECREATIVO</string>
    <string name="rafael_costa" translatable="false">*RAFAEL COSTA</string>
    <string name="precisa_de_ajuda_mas_est_em_casa">PRECISA DE AJUDA MAS ESTÁ EM CASA?</string>
    <string name="registo_entrar">REGISTO/ENTRAR</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="e_mail">E-mail</string>
    <string name="insira_idade">Insira Idade</string>
    <string name="f">F</string>
    <string name="m">M</string>
    <string name="genero">Genero:</string>
    <string name="profiss_o">Profissão</string>
    <string name="voluntario">Voluntario</string>
    <string name="infetado">Infetado</string>
    <string name="registar">REGISTAR</string>
    <string name="cancelar">CANCELAR</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="e_mail">E-mail</string>
    <string name="log_in">Log-In</string>
    <string name="cancelarLogin">Cancelar</string>
</resources>
